--- a/background.html
+++ b/background.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <script src=browser-polyfill.js></script>
-<script type=module src=extension.js></script>
+<script type=module src=background.js></script>
